# ffw-slot-selector

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  openapi.yaml
backend/: Cargo.toml  build.rs
backend/migrations/: 0001_initial.sql  0002_booking_name_email.sql
backend/src/: api.rs  db.rs  email.rs  lib.rs
backend/templates/: confirmation.eml  confirmation.txt
frontend/: Cargo.toml  build.rs
frontend/src/: lib.rs
frontend/static/: admin.html  edit.html  index.html  style.css
scripts/: create_users.sh  gen_qrcodes.sh  labels.typ
server/: Cargo.toml  build.rs
server/src/: admin.rs  main.rs
