[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["server"]
server = []
conversion = []

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie", "query"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
validator = { version = "0.19", features = ["derive"] }
ammonia = "4"
base64 = "0.22"
headers = "0.4"
http = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
