[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
backend = { path = "../backend" }
axum = { version = "0.8" }
tokio = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6" }
base64 = { workspace = true }
uuid = { workspace = true }
